--- a/README
+++ b/README
@@ -1,7 +1,11 @@
 If you want to create authrized keys,
 you can modify "userlist.txt".
 After modification, run flowing command, as
+```bash
 bash run.sh --create
+```
 
 You can distribute "authorized_keys" for each users in "userlist.txt", by following command,
+```bash
 bash run.sh --distribute
+```
